feat(iot): 替换InfluxDB为分层时序存储并增强异常检测功能
- 移除InfluxDB依赖，采用Chronicle Map + MapDB分层存储架构
- 实现热数据(24小时)、温数据(7天)、冷数据分层存储策略
- 新增AnomalyDetector组件，支持3σ、IQR、Z-Score等多种异常检测算法
- 集成Chronicle Queue高性能消息队列，支持自动降级到内存队列
- 增强设备数据处理流程，集成窗口聚合和实时异常检测
- 添加SPI机制支持外部驱动插件动态加载
- 优化Docker部署配置，减少内存占用200-300MB